--- a/language/ru-RU/ru-RU.ini
+++ b/language/ru-RU/ru-RU.ini
@@ -331,3 +331,5 @@ CONFIRMED=Подтвержденный
 CANCELLED=Отмененный
 REFUNDED=Возвращенный
 SHIPPED=Доставленный
+
+PRODUCTS_NOT_FOUND="Искомый товар не найден"
